--- a/소개.html
+++ b/소개.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="space-gallery" data-space-gallery>
-          <article class="space-card" role="button" tabindex="0" data-space-type="facility" data-images="assets/img/유리온실.jpg,assets/img/유리온실2.jpg,assets/img/가든센터.jpg" data-title="유리 온실" data-desc="사계절 식물이 숨 쉬는 가시림의 중심 온실입니다. 계절별 테마 전시와 명상 클래스가 열립니다.">
+          <article class="space-card" role="button" tabindex="0" data-space-type="facility" data-images="assets/img/유리온실.jpg,assets/img/유리온실2.jpg,assets/img/가든센터.jpg" data-title="체험장" data-desc="사계절 식물이 숨 쉬는 가시림의 중심 온실입니다. 계절별 테마 전시와 명상 클래스가 열립니다.">
             <figure class="space-card__media">
               <img src="assets/img/유리온실.jpg" alt="가시림 유리 온실 내부" loading="lazy"/>
             </figure>
@@ -54,7 +54,7 @@
             </div>
           </article>
 
-          <article class="space-card" role="button" tabindex="0" data-space-type="facility" data-images="assets/img/가든센터.jpg,assets/img/유리온실.jpg,assets/img/유리온실2.jpg" data-title="가든센터" data-desc="정원 관리 노하우와 계절 식물을 만날 수 있는 가시림의 안내 센터입니다.">
+          <article class="space-card" role="button" tabindex="0" data-space-type="facility" data-images="assets/img/가든센터.jpg,assets/img/유리온실.jpg,assets/img/유리온실2.jpg" data-title="식물판매장" data-desc="정원 관리 노하우와 계절 식물을 만날 수 있는 가시림의 안내 센터입니다.">
             <figure class="space-card__media">
               <img src="assets/img/가든센터.jpg" alt="가시림 가든센터 외관" loading="lazy"/>
             </figure>
@@ -64,7 +64,7 @@
             </div>
           </article>
 
-          <article class="space-card" role="button" tabindex="0" data-space-type="facility" data-images="assets/img/유리온실2.jpg,assets/img/main.jpg,assets/img/카페.jpg" data-title="마음 온실 스튜디오" data-desc="온실 안쪽에 마련된 조용한 스튜디오로, 명상과 요가 프로그램이 운영됩니다.">
+          <article class="space-card" role="button" tabindex="0" data-space-type="facility" data-images="assets/img/유리온실2.jpg,assets/img/main.jpg,assets/img/카페.jpg" data-title="명상스튜디오" data-desc="온실 안쪽에 마련된 조용한 스튜디오로, 명상과 요가 프로그램이 운영됩니다.">
             <figure class="space-card__media">
               <img src="assets/img/유리온실2.jpg" alt="마음 온실 스튜디오 전경" loading="lazy"/>
             </figure>
@@ -74,7 +74,7 @@
             </div>
           </article>
 
-          <article class="space-card" role="button" tabindex="0" data-space-type="facility" data-images="assets/img/카페.jpg,assets/img/main.jpg,assets/img/가든센터.jpg" data-title="플랜트 카페" data-desc="제철 허브와 티를 즐길 수 있는 카페와 숍으로, 가시림의 시그니처 음료를 제공합니다.">
+          <article class="space-card" role="button" tabindex="0" data-space-type="facility" data-images="assets/img/카페.jpg,assets/img/main.jpg,assets/img/가든센터.jpg" data-title="카페" data-desc="제철 허브와 티를 즐길 수 있는 카페와 숍으로, 가시림의 시그니처 음료를 제공합니다.">
             <figure class="space-card__media">
               <img src="assets/img/카페.jpg" alt="가시림 플랜트 카페" loading="lazy"/>
             </figure>
