--- a/admin/index.html
+++ b/admin/index.html
@@ -3,8 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <title>Gasirim CMS</title>
-    <script src="https://unpkg.com/netlify-cms-app@^2.0/dist/netlify-cms.js"></script>
+    <meta name="robots" content="noindex" />
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
   </head>
   <body>
+    <script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", (user) => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => document.location.reload());
+          }
+        });
+      }
+    </script>
   </body>
 </html>
