--- a/shop.html
+++ b/shop.html
@@ -24,7 +24,7 @@
   <div class="page">
     
     <!-- Header -->
-    <div id="site-header" data-include="partials/header-site.html" data-hero-title="Shop" data-hero-image="assets/img/pageheader/shop-page.jpg"></div>
+    <div id="site-header" data-include="partials/header-site.html" data-hero-title="Shop" data-hero-eyebrow="판매" data-hero-image="assets/img/pageheader/shop-page.jpg"></div>
     <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
 
     <main class="shop-main" aria-labelledby="shop-heading">
