--- a/방문.html
+++ b/방문.html
@@ -24,16 +24,12 @@
   <div class="page">
 
     <!-- Header -->
-    <div id="site-header" data-include="partials/header-site.html" data-hero-title="방문 안내" data-hero-image="assets/img/pageheader/visit-page.jpg" data-hero-alt="가시림 방문 안내 헤더 이미지"></div>
+    <div id="site-header" data-include="partials/header-site.html" data-hero-title="방문안내" data-hero-eyebrow="VISIT" data-hero-image="assets/img/pageheader/visit-page.jpg" data-hero-alt="가시림 방문 안내 헤더 이미지"></div>
     <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
 
     <main class="visit-main" aria-labelledby="visit-heading">
 
       <section class="visit-overview" aria-labelledby="visit-heading">
-        <div class="visit-overview__intro">
-          <span class="visit-overview__eyebrow">Plan your visit</span>
-          <h1 id="visit-heading" class="visit-overview__title">방문 안내</h1>
-        </div>
         <nav class="visit-overview__tags" aria-label="방문 안내 섹션">
           <a class="visit-tag" href="#운영시간">운영 시간</a>
           <a class="visit-tag" href="#이용요금">이용 요금</a>
@@ -52,25 +48,20 @@
         <div class="운영시간__grid">
           <figure class="운영시간__image">
             <img src="assets/img/ticketoffice.jpg" alt="가시림 매표소 앞 사진" loading="lazy" />
-            <figcaption class="운영시간__caption">가시림 입구 및 매표소</figcaption>
           </figure>
           <article class="visit-hours-card" aria-label="운영 정보">
             <dl class="visit-hours-list">
               <div class="visit-hours-list__item">
-                <dt>운영</dt>
-                <dd>매일 09:30 – 18:00</dd>
+                <dt>주소</dt>
+                <dd>제주특별자치도 서귀포시 표선면 가시리 3266</dd>
               </div>
               <div class="visit-hours-list__item">
-                <dt>정기 휴무</dt>
-                <dd>매주 수요일 </dd>
+                <dt>운영 시간</dt>
+                <dd>매일 오전 09:30 – 오후 06:00 <b>(수요일 휴무)</b></dd>
               </div>
               <div class="visit-hours-list__item">
                 <dt>입장 마감</dt>
-                <dd>17:30</dd>
-              </div>
-              <div class="visit-hours-list__item">
-                <dt>입장권 구매 방법</dt>
-                <dd>현장 구매, 온라인 예약 (네이버, 지마켓), 전화 예약 모두 가능합니다.</dd>
+                <dd>오후 05:30</dd>
               </div>
             </dl>
           </article>
