--- a/소개.html
+++ b/소개.html
@@ -24,7 +24,7 @@
   <div class="page">
 
     <!-- Header -->
-    <div id="site-header" data-include="partials/header-site.html" data-hero-title="소개" data-hero-image="assets/img/pageheader/intro-page.jpg"></div>
+    <div id="site-header" data-include="partials/header-site.html" data-hero-title="소개" data-hero-eyebrow="ABOUT" data-hero-image="assets/img/pageheader/intro-page.jpg"></div>
     <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
 
     <main>
@@ -212,7 +212,7 @@
         <figure class="garden-map reveal from-up">
           <img src="assets/img/소개/지도.jpg" alt="가시림 수목원 지도">
         </figure>
-        <!-- 스팟 리스트????? -->
+
       </section>
 
       <!-- 둘러 보기 -->
