--- a/프로그램목록.html
+++ b/프로그램목록.html
@@ -23,7 +23,7 @@
 <body>
   <div class="page">
     <!-- Header -->
-    <div id="site-header" data-include="partials/header-site.html" data-hero-title="프로그램" data-hero-image="assets/img/pageheader/program-page.jpg"></div>
+    <div id="site-header" data-include="partials/header-site.html" data-hero-title="프로그램" data-hero-eyebrow="PROGRAM" data-hero-image="assets/img/pageheader/program-page.jpg"></div>
     <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
 
     <main>
